--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         h1 {
             font-size: 48px;
-            color: #007bff;
+            color: #ffffff;
             margin-bottom: 10px;
             letter-spacing: 3px;
         }
@@ -60,8 +60,25 @@
             margin-top: 20px;
         }
 
+        .play-button {
+            display: inline-block;
+            background-color: #28a745;
+            color: #fff;
+            padding: 15px 30px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            margin-top: 20px;
+            transition: background-color 0.3s;
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
+        }
+
         .play-button:hover {
             background-color: #218838;
+        }
+
+        .play-button:active {
+            transform: translateY(2px);
         }
 
         .section {
@@ -105,7 +122,7 @@
     <div class="header">
         <h1>Quest of the Enchanted Amulet</h1>
     </div>
-    <img src="link-to-screenshot.png" alt="Quest of the Enchanted Amulet Screenshot">
+    <img src="Screenshot.png" alt="Quest of the Enchanted Amulet Screenshot">
 
     <div class="section">
         <p>
