--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
         }
 
         .header {
-            background-image: url("header-background.jpg");
-            background-size: cover;
-            background-position: center;
             padding: 20px;
             text-align: center;
         }
 
         h1 {
+            font-family: Consolas, monospace; /* Change font to Consolas */
             font-size: 48px;
-            color: #ffffff;
+            color: #007bff;
             margin-bottom: 10px;
             letter-spacing: 3px;
         }
